Projects/project_2/actual_project/style.css
@import url("https://use.typekit.net/fts4cij.css");

/*the html tag allows you to set a minimum font size*/
html{
  font-size: 20px;
  line-height: 20px;
}

body {
    margin: 20%;
    padding: 0;
    font-size: medium;
    background-color: #FFE4B5; /* Light Orange background color */
    font-family:"brandon-grotesque", sans-serif;
    width:80% auto;
  }
  
  #announcement-bar {
    background-color: #FAAB4A; /* Orange color for the announcement bar */
    color: black;
    text-align: center;
    padding: 3px;
  }
  
  header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
  }

  h1{
    font-size: 40px;
    line-height: normal;
    display: flex;

  }

  h2{
    font-size: 30px;
    font-weight: 450px;
    color: #333;
    line-height: normal;

  }

  h3{
    font-weight: 20px ;
  }

  p{
    font-size: 15pt;
    font-weight: 390;
    line-height: normal;
  }

  a{
    font-size: 20px;
    font-weight: 450px;
    color: #333;
    line-height: normal;

  }

  /*Navigation*/

  
  .logo {
    cursor: pointer;
    padding: 2%;
  }
  
  nav {
    display: flex;
    justify-content: center;
    margin-right: 0%;
  }
  
  nav a {
    margin: 0 15px;
    text-decoration: none;
    color: black;
    flex-grow: 1;
    text-align: center;
    font-size: 20pt;
  }

  .google_map_navicon{
    display: flex;
    margin-right:5%;
  }

  nav a:hover{
    text-decoration: underline;
    color:#E4423B;
  }
  
/*-----------------Locations and hours home page --------------- */

  #locations-hours {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    padding: 20px;
    width:75%;
    margin:auto;
  }


  body {
    margin: 0;
    padding: 0;
  }

/*------------------Hero home image section----------------------*/
  .hero_home {
    position: relative;
    width: 100%;
    height: 797px;
    background: url('images/home_hero.png') center/cover no-repeat; /* Add your photo path */
    border-radius:  0px  0px 32px 32px ;
  }

  .hero_home #text-overlay {
    position: absolute;
    bottom: 0;
    right: 0;
    padding: 20px;
    color: white;
  }

  #lounge{
    color: white;
    font-family:"brandon-grotesque", sans-serif;
  }

/*------------------Reserve now section home page---------------*/

body {
    margin: 0;
    padding: 0;
    font-family: "brandon-grotesque", sans-serif;
  }

  #cafe-container {
    display: flex;
    align-items: flex start;
    flex:1
  }

  #cafe-photo {
    width:100%;
  }

  #cafe-info {
    padding: 20px;
    padding-top:150px;
    padding-left: 70px;
   /*flex:1*/ 
  }

  h2 {
    color: #333;
  }

  #reserve-button {
    display: inline-block;
    padding: 10px 20px;
    margin-top: 10px;
    color: #E4423B;
    background-color: #FFE4B5;
    border-color: #E4423B;
    cursor: pointer;
    border-radius: 5px;
  }

  #reserve-button:hover {
    background-color: #E4423B; /* Lighter orange on hover */
    color:#FFE4B5
  }

/*---------------------------------Homepage menu section------------------------------------*/

    #photo-section {
      display: flex;
      justify-content: space-between;
      padding: 40px;
    }

    #text-block {
      text-align: center;
      padding: 230px 60px;
    }

    #photo {
      width: 100%;
    }

    #view-menu-button, .button {
      padding: 10px 20px;
      background-color: #FFE4B5; /* Orange background color */
      color: #E4423B;
      border: 2px solid #E4423B;
      cursor: pointer;
      border-radius: 5px;
      display:inline-block;
      text-decoration: none;
    }

    #view-menu-button:hover, .button:hover {
      background-color: #E4423B; /* Lighter orange on hover */
      color:#FFE4B5
    }


/*---------------------Land awknoledgement section home page---------------------*/

#acknowledgment-section {
    background-color: #431650;
    border-radius: 32px;
    max-width: 1380;
    color: #FFE4B5;
    text-align: center;
    justify-content: center;
    padding: 3%;
    margin: 1.5%;
  }

  #acknowledgment-section h2 {
    color: #FFE4B5;
  }

/*--------------------------Email Sign up Home page-----------------------------*/

body {
    margin: 0;
    padding: 0;
  }

  #signup-section {
    background-image: url('images/nalu_backgroundpattern_email.png'); /* Add your background image path */
    background-size: cover;
    width: 100%;
    height: 294px;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  form {
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  #email-input {
    width: 300px;
    padding: 15px;
    opacity: 0.5;
    background-color: #FFE4B5;
    border: 2px solid #E4423B;
    border-radius: 5px;
  }

  #stay-in-loop {
    margin-left: 20px;
    text-align: center;
    opacity: 0.7;
  }

  #email_submit {
    padding: 10px 20px;
    background-color: #FFE4B5; /* Orange background color */
    color: #E4423B;
    border-color: #E4423B;
    cursor: pointer;
    border-radius: 5px;
  }

  #email_submit:hover {
    background-color: #E4423B; /* Lighter orange on hover */
    color:#FFE4B5
  }

/*---------------------------------scroll button--------------------------------
#scroll_button {
    display: inline-block;
    background-color: #ff9800;
    width: 50px;
    height: 50px;
    text-align: center;
    border-radius: 4px;
    position: fixed;
    bottom: 30px;
    right: 30px;
    transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
    opacity: 0;
    visibility: hidden;
    z-index: 1000;
  }
  #scroll_button::after {
    content: "\f077";
    font-family: "brandon-grotesque", sans-serif;
    font-weight: normal;
    font-style: normal;
    font-size: 2em;
    line-height: 50px;
  }
  #scroll_button:hover {
    cursor: pointer;
    background-color: #333;
  }
  #scroll_button:active {
    background-color: #555;
  }
  #scroll_button.show {
    opacity: 1;
    visibility: visible;
  }
/*--------------------------Menu page-----------------------------------------------*/

.menu_header_background{
  background-image: url('images/nalu_backgroundpattern_email.png');
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 7%;
  padding-bottom: 7%;
}

.nalu_logo_menu{
width:30%;
}

.kava_types h2 {
  flex-direction: row;
  display: flex;
}

.menu_items{
  display:flex;
  width:80%;
  margin:auto;
}

.menu_items div{
  flex:1;
}

.kava_drinks {
  margin:auto;
  width:80%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  border-bottom: 2px solid #E4423B;
  padding-bottom: 3%;
}

.nalu_logo_menu{
  display: flex;
  
}

.right-menu{
  Padding-left:10%
}

hr.line{
border: 1px solid #E4423B;
margin: auto;
display: flex;
max-width:
}

.right menu .fda h3{
  border-radius: 20%;
}

.fda{
  border-style:dotted;
  color: #E4423B;
  border-radius: 5%;
  padding: 3%;
}

  /*---------------------------------space rental page --------------------------------------*/

#spacerental{
  border-radius: 5%;
  max-width: 1380;
  text-align: left;
  justify-content: center;
  padding: 20px;
  margin: 1.5%;
}

#rentalinfo #hours{
  background-color: #431650;
  border-radius: 32px;
  max-width: 1380;
  color: #FFE4B5;
  display: flex;
  text-align: left;
  padding: 10px;
  margin: 1.5%;  
}

.right-hours{
  padding:80px;
}

#additionalnotes{
  border-radius: 5%;
  max-width: 1380;
  text-align: center;
  justify-content: center;
  padding: 10px;
  margin: 1.5%;
}

#rentalinfo #hours h2{
  color: #FFE4B5;
  justify-content: center;
}

.hrimage{
padding-left: 5%;
padding-top: 5%;
padding-bottom: 5%;
}

/*--------------------------About Page-----------------------------------------------*/

.about_home{
margin: 5%;
}

.flex{
  display:flex;
}

.flex .right{
  padding-left: 80px;
  padding-top: 200px;
}

#brandswesupport{
  display: flex;
  margin-left: 10%;
  margin-right: 10%;
  justify-content: space-evenly;
  background-color: #FAAB4A;
  padding:2%;
  border-radius: 32px;
}

#brandswesupport a{
  color:#431650;
  text-decoration: none;
}

#brandswesupport a:hover{
  text-decoration: underline;
}

.left_imagepad{
padding-left: 10%;
}

/*---------------------------------footer--------------------------------------*/
  
footer {
  background-color: #FAAB4A; /* Orange color for the footer */
  color: black;
  padding: 20px;
  display: flex;
  justify-content: space-between;
  }
  
footer a {
  color: black;
  text-decoration: none;
  display: flex;
  margin-right: 20px;
  margin-bottom:20px;
  }

  footer a:hover{
    text-decoration: underline;
  }
  
.social-media{
  display:flex;
  max-width: 100%;
  align-items: center;
  padding-left: 10%;

  } 

.social-media a {
  margin-right: 10px;
  flex-direction: column;
  }

.copywrite{
  display: flex;
  margin-top:auto;
  }
  
#footer-links {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  padding-right: 10%;
  margin-right:20px;
  }
  
#middle-line {
  border-right: 2px solid white;
  height: 20px;
  margin: 0 20px;
  }
  
/*-----------------------Media Query -----------------------------*/

  @media screen and (max-width:758px){

    nav {
      flex-direction: column;
    
    }

    nav a {
      padding: 0;
    }

    nav ul a{
      padding-right: 20px;
    }

    .menu_header_background {

    }

    .nalu_logo_menu{
      width:50%;
      }

  }

